<resources>
    <string name="app_name">My Application</string>

    <!-- Main Activity strings -->
    <string name="main_activity_btn1_txt" translatable="true">Button 1</string>
    <string name="main_activity_btn2_txt" translatable="true">Button 2</string>
    <string name="main_activity_addbtn_txt" translatable="true">إضافة</string>
    <string name="main_activity_lstbtn_txt" translateble="true">لائحة</string>
    <string name="main_activity_aboutbtn_txt" translatable="true">حول البرنامج</string>
    <string name="main_activity_addbtn_toast_txt" translatable="true">تم الضغط على زر الإضافة</string>

    <!--Add Screen strings-->
    <string name="addscreen_productname_label_txt" translatable="true">اسم البضاعة</string>
    <string name="addscreen_productname_edittext_autofillhint_txt" translatable="true">السمك</string>
    <string name="addscreen_productprice_label_txt" translatable="true">ثمن البضاعة</string>
    <string name="addscreen_productprice_edittext_autofillhint_txt" translatable="true">13 درهم</string>
    <string name="screen_already_active" translatable="true"> أنت الآن بالصفحة نفسها</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- About screen strings -->
    <string name="aboutappscreen_txt" translatable="true">حول التطبيق :
    بسم الله الرحمن الرحيم، الحمد لله و الصلاة و السلام على رسول الله و على آله.
    هذا التطبيق يهدف إلى المساعدة بإذن الله تعالى على تسجيل المشتريات في وقت سريع .
    يضم التطبيق شاشة رئيسية تضم ثلاث أزرار، الأول يحتوي على شاشة الإضافة و هي الشاشة التي تعرض في الأول مسبقا و يمكن الرجوع إليها بالضغط على هذا الزر.
    - الزر الثاني لعرض لائحة المشتريات المسجلة من قبل حسب تاريخ تسجيلها.
     أما الثالث فهو للرجوع إلى هذه الشاشة للاطلاع على كيفية استخدام التطبيق.</string>

    <!--List Screen Strings-->
    <string-array name="listscreen_dates_exemple">
        <item> 12/05/2019 15:30</item>
        <item> 06/05/2019 08:10</item>
        <item> 01/05/2019 12:15</item>
    </string-array>
    
    <!-- List element details strings -->
    <string name="details_productbuying_time_txt" translatable="true">وقت الاقتناء</string>
    <string name="details_productprice_label_txt" translatable="true">ثمن البضاعة</string>
    <string name="details_productname_label_txt" translatable="true">اسم البضاعة</string>

</resources>
