<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <!--في هذا الإطار سنقوم إن شائ الله تعالى بإنشاء شاشة لإدخال المعلومات -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/addscreen_pricelabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/addscreen_productprice_label_txt"
            />
        <TextView
            android:id="@+id/addscreen_productnamelabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2"
            android:text="@string/addscreen_productname_label_txt"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/addscreen_price_edittext"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/addscreen_productprice_edittext_autofillhint_txt"/>
        <EditText
            android:id="@+id/addscreen_productname_edittext"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:inputType="text"
            android:hint="@string/addscreen_productname_edittext_autofillhint_txt"/>
    </LinearLayout>
</LinearLayout>
