<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Add button -->
        <Button
            android:id="@+id/activity_main_addbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_addbtn_txt"/>

        <Button
            android:id="@+id/activity_main_lstbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_lstbtn_txt"/>

        <Button
            android:id="@+id/activity_main_aboutbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_aboutbtn_txt"
             />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/activity_main_framelayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        />

   <!-- هذه الفقرة تم إلغاؤها مؤقتا
   <Button
        android:id="@+id/activity_main_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/main_activity_btn1_txt"/>

    <Button
        android:id="@+id/activity_main_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/main_activity_btn2_txt"/>
        -->

</LinearLayout>
